# scadenzade

./: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  path  pyproject.toml  requirements.txt  scadenzade.py
config/: path.csv  year.csv
control/: widget_control.py
data_box/: dati_clienti.csv  dati_fornitori.csv
data_box/xml_clienti/: IT01879020517A2025_a0bHJ.xml  IT01879020517A2025_aF2Fl.xml  IT01879020517A2025_aF2ME.xml  IT01879020517A2025_aF2O0.xml  IT01879020517A2025_aF2RE.xml  IT01879020517A2025_aF2Zy.xml  IT01879020517A2025_aF3lT.xml  IT01879020517A2025_aF3yU.xml  IT01879020517A2025_aF3zy.xml  IT01879020517A2025_bZANl.xml  IT01879020517A2025_bZBCP.xml  IT01879020517A2025_bZC0F.xml  IT01879020517A2025_bZC3P.xml  IT01879020517A2025_bZC3S.xml  IT01879020517A2025_bZC4c.xml  IT01879020517A2025_bZCn7.xml  IT01879020517A2025_bZDcE.xml  IT01879020517A2025_bZDok.xml  IT01879020517A2025_blC0M.xml  IT01879020517A2025_bswGx.xml  IT01879020517A2025_bswLn.xml  IT01879020517A2025_bswQ3.xml  IT01879020517A2025_bswRn.xml  IT01879020517A2025_bswzO.xml  IT01879020517A2025_bsx0m.xml  IT01879020517A2025_bsx1D.xml  IT01879020517A2025_bsx2s.xml  IT01879020517A2025_bsx3q.xml  IT01879020517A2025_bsxod.xml  IT01879020517A2025_c2s0u.xml  IT01879020517A2025_cF0gp.xml  IT01879020517A2025_cF0hS.xml  IT01879020517A2025_cF0hi.xml  (+32 more)
models/: add_scad.py  data_provider.py  dati_forni.csv  readwrite_csv_xml.py  scadenz.py
scadenzade.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: scadenzade.py
view/: main_view.py  palette.py  popup.py  widget_class.py
(+173 files in other folders)
