[project]
name = "scadenzade"
version = "0.6.0"
description = "Gestione scadenze fatture elettroniche italiane (ADE)"
authors = [{ name="Stefano Alemani", email="stefano@alemani.it" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "lxml==6.0.1",
    "tabulate==0.9.0",
    "urwid==3.0.2"
]

[project.scripts]
scadenzade = "scadenzade.scadenzade:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scadenzade"]

[tool.setuptools.package-dir]
scadenzade = "src/"