[project]
name = "scadenzade"
version = "0.6.0"
description = "Gestione scadenze fatture elettroniche italiane (ADE)"
authors = [{ name="Stefano Alemani", email="stefano@alemani.it" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["fatture", "scadenze", "ADE", "XML", "CSV", "Italia"]

dependencies = [
    "lxml==6.0.1",
    "tabulate==0.9.0",
    "urwid==3.0.2"
]

[project.urls]
Homepage = "https://github.com/tuutente/scadenzade"
Repository = "https://github.com/tuutente/scadenzade"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["config", "control", "data_box", "models", "view"]